[package]
name = "vegamm_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.26"
futures-util = { version = "0.3.26", features = ["tokio-io", "io"] }
hyper = "0.14.24"
log = "0.4"
num-bigint = "0.4.3"
num-traits = "0.2.15"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "net", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.11"
tonic = "0.8.2"
tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
vega_protobufs = { git = "https://github.com/jeremyletang/vega-rust-sdk" }
vega_wallet_client = { git = "https://github.com/jeremyletang/vega-rust-sdk" }
